Replaced java instanceof codeblock for switch block, feature added in jdk 20!